--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
 	<div class="container-fluid">
 		<h3>Research</h3>
 			<p2>
-			To promote the health of earth's ecosystems and the well-being of its inhabitants, Common Nature Institute works to develop scientific research, analyze this research and its core concepts. We make our research and analyses publicly available in the hope of creating a secure society for both present and future generations. 
+			To promote the health of earth's ecosystems and the well-being of its inhabitants, Common Nature Institute works to develop and analyze scientific research and its core concepts. We make our research and analyses publicly available with the hope of creating a secure society for both present and future generations. 
 			<br>
 			<br>
-			In its early stages, the core research activities of the Institute will focus on deploying conceptual and ethical analyses of deeply intertwined social and environmental issues in order to better understand and respond to the problems we face as a society today. This includes analyses aimed at improving our understanding the responsible and equitable uses of energy, developing knowledge of how we might best respond to changing climatic systems, studying the impacts of city and landscape design and development, and answering questions of how we might foster well-being amidst this century's challenges. 
+			In its early stages, the core research activities of the Institute will focus on deploying conceptual and ethical analyses of deeply intertwined social and environmental issues in order to better understand and respond to the problems we face as a society today. This includes analyses aimed at improving our understanding of the responsible and equitable uses of energy, developing knowledge of how to best respond to changing climatic systems, studying the impacts of city and landscape design and development, and answering questions of how we might foster well-being amidst this century's challenges. 
 			<br>
 			<br>
 			In the long-term, the Institute will develop a network of social and natural scientists and researchers to expand our knowledge of these systems and their interconnections, making our findings publicly accessible for education and further research.
@@ -169,7 +169,7 @@
 <footer>
 	<section id="footer">
 		<div class="container-fluid">
-		<p>© Common Nature Institute</p>
+		<p>© Common Nature Institute  <a href="https://commoninstitute.org/privacy_policy"><i>Privacy Policy</i></a></p>
 		<br>
 </footer>
 
