--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 <iframe name="hidden_iframe" 
 		id="hidden_iframe"
 		style="display:none;" 
-		onload="if(submitted){window.location='https://commonnatureinstitute.org/newsletter_confirm';}">
+		onload="if(submitted){window.location='https://commoninstitute.org/newsletter_confirm';}">
 </iframe>
 
 <form class="form" action="https://docs.google.com/forms/d/e/1FAIpQLSf7Cx-5-qTpChr71dNAtVjuoWY4AYYDV8P43aSRgm7C_tHVCQ/formResponse" 
